--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,30 @@
-django<2
+appdirs==1.4.0
+azure==1.0.3
+azure-common==1.1.4
+azure-mgmt==0.20.2
+azure-mgmt-common==0.20.0
+azure-mgmt-compute==0.20.1
+azure-mgmt-network==0.20.1
+azure-mgmt-nspkg==1.0.0
+azure-mgmt-resource==0.20.1
+azure-mgmt-storage==0.20.0
+azure-nspkg==1.0.0
+azure-servicebus==0.20.1
+azure-servicemanagement-legacy==0.20.2
+azure-storage==0.20.3
+Django==1.10.3
+django-appconf==1.0.2
+django-bootstrap-form==3.2.1
+django-tables2==1.3.0
+django-user-accounts==2.0.0
+futures==3.0.5
+jsonfield==1.0.3
+packaging==16.8
+pinax-eventlog==1.1.2
+pinax-theme-bootstrap==7.11.0
+pinax-webanalytics==2.0.4
+pyparsing==2.1.10
+python-dateutil==2.6.0
+pytz==2016.10
+requests==2.13.0
+six==1.10.0
